src/components/intro/intro.scss
@import "../../global.scss";
@font-face { font-family: Stigma; 
             src: url('../../Stigma Display Typeface.ttf'); } 

@font-face { font-family: Helmswald; 
             src: url('../../Helmswald Post demo.otf'); } 

.Intro{
    
    height: 80%;
    width: 100%;
    background-color:$bgColour;
    color: $txtColour;

    
    .wrapper{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        font-family: Stigma;
        overflow: hidden;
        padding-top: 25vh;
        font-weight: bolder;

        .logo{
        font-family: Helmswald;
        font-size: 30vh;
        margin-bottom: -62vh;
        z-index: 5;
        }
        .top{
            font-size: 40vh;
            font-family: inherit;
            color: transparent;
            opacity: 0.12;
            -webkit-text-stroke: 5px #0000001c;
        }
        .bot{
            font-size: 48vh;
            font-family: inherit;
            color: $txtColour;
            margin-top: -14vh;
            color: transparent;
            opacity: 0.12;
            -webkit-text-stroke: 5px #0000001c;
            
        }
        h3{
            font-size: 0;
        }

    }
    
    
}

